<resources>
    <string name="app_name">My Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_multiplication">*</string>
    <string name="_opening">(</string>
    <string name="_0">0</string>
    <string name="_closing">)</string>
    <string name="_division">/</string>
    <string name="_clear">C</string>
    <string name="_power">^</string>
    <string name="_equal">=</string>
    <string name="_zero">0</string>
    <string name="_dot">.</string>
    <string name="_backspace">⌫</string>
</resources>